--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="title-price">The future of the planet is yet to be determined.</p>
             </div>
             <div class="cta">
-                <a href="#" class="cta-link cta-link-darker">Join our waiting list</a>
+                <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr" class="cta-link cta-link-darker">Join our waiting list</a>
             </div>
 
             <div class="carousel">
@@ -159,7 +159,7 @@
                 <p class="title-price">We don't predict the future. We create it.</p>
             </div>
             <div class="cta">
-                <a href="#" class="cta-link cta-link-darker">Join our waiting list</a>
+                <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr" class="cta-link cta-link-darker">Join our waiting list</a>
             </div>
         </div>
     </section>
