--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <section class="hero hero-main">
         <div class="container">
             <div class="title">
-                <h2 class="title-heading">ReCreate Items From Waste & Food</h2>
-                <h3 class="title-sub-heading">Dedicated To Sustainability & Innovation</h3>
+                <h2 class="title-heading">Formulations to make your day even better</h2>
+                <h3 class="title-sub-heading">Made out of the rich diversity of raw materials found in the Americas <br> and with a considerably smaller impact to our precious environment.</h3>
                 <!-- <p class="title-price">The future of the planet is yet to be determined.</p> -->
             </div>
             <div class="cta">
@@ -65,7 +65,7 @@
             <div class="title title-dark">
                 <h2 class="title-heading-second"></h2>
                 <h3 class="title-sub-heading">Protecting the environment</h3>
-                <p class="title-price">The future of the planet is yet to be determined.</p>
+                <p class="title-price">Dedicated To Sustainability & Innovation</p>
             </div>
             <!-- <div class="cta">
                 <a href="#" class="cta-link cta-link-darker">Learn more</a>
