--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <section class="hero hero-main">
         <div class="container">
             <div class="title">
-                <h2 class="title-heading">Formulations to make your day even better</h2>
-                <h3 class="title-sub-heading">Made out of the rich diversity of raw materials found in the Americas <br> and with a considerably smaller impact to our precious environment.</h3>
+                <h2 class="title-heading">Formulations to make your day <br> even better</h2>
+                <h3 class="title-sub-heading">Made out of the rich diversity of raw materials found in the Americas and with a considerably smaller impact to our precious environment</h3>
                 <!-- <p class="title-price">The future of the planet is yet to be determined.</p> -->
             </div>
             <div class="cta">
@@ -155,7 +155,7 @@
         <div class="container">
             <div class="title title-dark">
                 <h2 class="title-heading-fourth"></h2>
-                <h3 class="title-sub-heading">Remove polluting materials from the equation</h3>
+                <h3 class="title-sub-heading">use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with.</h3>
                 <p class="title-price">We don't predict the future. We create it.</p>
             </div>
             <div class="cta">
