--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="hero hero-main">
         <div class="container">
             <div class="title">
-                <h2 class="title-heading">Formulations to make your day <br> even better</h2>
+                <h2 class="title-heading">Formulations to make your day even better</h2>
                 <h3 class="title-sub-heading">Made out of the rich diversity of raw materials found in the Americas and with a considerably smaller impact to our precious environment</h3>
                 <!-- <p class="title-price">The future of the planet is yet to be determined.</p> -->
             </div>
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="title title-dark">
                 <h2 class="title-heading-second"></h2>
-                <h3 class="title-sub-heading">Protecting the environment</h3>
+                <h3 class="title-sub-heading">We don't predict the future. We create it.</h3>
                 <p class="title-price">Dedicated To Sustainability & Innovation</p>
             </div>
             <!-- <div class="cta">
@@ -155,8 +155,8 @@
         <div class="container">
             <div class="title title-dark">
                 <h2 class="title-heading-fourth"></h2>
-                <h3 class="title-sub-heading">use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with.</h3>
-                <p class="title-price">We don't predict the future. We create it.</p>
+                <h3 class="title-sub-heading">Use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with.</h3>
+<!--                 <p class="title-price">We don't predict the future. We create it.</p> -->
             </div>
             <div class="cta">
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr" class="cta-link cta-link-darker">Join our waiting list</a>
