--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Deiko Inc</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="imagen del tap">
+<!--     <link rel="icon" type="image/png" href="imagen del tap"> -->
 </head>
 <body>
     <header>
