--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta name="keywords" content="footer, address, phone, icons"/>
     <title>Deiko Inc</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-<!--     <link rel="icon" type="image/png" href="imagen del tap"> -->
+    <link rel="icon" type="image/png" href="imagen del tap">
 </head>
 <body>
     <header>
@@ -249,12 +247,12 @@
         Use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas.
 		</p>
  
-		<div class="footer-icons">
+<!-- 		<div class="footer-icons">
  
-		<!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+		<a href="#"><i class="fa fa-facebook"></i></a>
 		<a href="#"><i class="fa fa-twitter"></i></a>
 		<a href="#"><i class="fa fa-linkedin"></i></a>
-		<a href="#"><i class="fa fa-github"></i></a>
+		<a href="#"><i class="fa fa-github"></i></a> -->
  
 		</div>
  
