--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
 				Use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas.
 			</p>
 
-			<div class="footer-icons">
+<!-- 			<div class="footer-icons">
 				<a href="#"><i class="fa fa-facebook"></i></a>
 				<a href="#"><i class="fa fa-twitter"></i></a>
 				<a href="#"><i class="fa fa-linkedin"></i></a>
 				<a href="#"><i class="fa fa-github"></i></a>
-			</div>
+			</div> -->
 		</div>
  
 		</footer>
