--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="hero hero-second">
         <div class="container">
             <div class="title title-dark">
-<!--                 <h2 class="title-heading-second"></h2> -->
+                <h2 class="title-heading-second"></h2>
 <!--                 <h3 class="title-sub-heading">Dedicated To Sustainability & Innovation</h3> -->
                 <p class="title-price">We don't predict the future. We create it.</p>
             </div>
