--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <section class="hero hero-second">
         <div class="container">
             <div class="title title-dark">
-                <h2 class="title-heading-second"></h2>
+<!--                 <h2 class="title-heading-second"></h2> -->
 <!--                 <h3 class="title-sub-heading">Dedicated To Sustainability & Innovation</h3> -->
-                <p class="title-price">We don't predict the future. We create it.</p>
+<!--                 <p class="title-price">We don't predict the future. We create it.</p> -->
             </div>
             <!-- <div class="cta">
                 <a href="#" class="cta-link cta-link-darker">Learn more</a>
@@ -157,7 +157,7 @@
             <div class="title title-dark">
                 <h2 class="title-heading-fourth"></h2>
 <!--                 <h3 class="title-sub-heading"></h3> -->
-<!--                 <p class="title-price">We don't predict the future. We create it.</p> -->
+                <p class="title-price">We don't predict the future. We create it.</p>
             </div>
             <div class="cta">
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr" class="cta-link cta-link-darker">Join our waiting list</a>
