--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
              </div>   
         </div>
         <ul class="thumb">
-            <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('rgba(118, 93, 105, 1)')"></li>
+            <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('rgb(255, 165, 0, 1)')"></li>
             <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('rgb(245,245,245)')"></li> 
             <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('#1e1e1e')"></li>
         </ul>
