--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <ul class="thumb">
             <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('rgb(255, 165, 0, 1)')"></li>
             <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('rgb(245,245,245)')"></li> 
-            <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('#1e1e1e')"></li>
+            <li><img src="images/hero/fifth/cam1.png" onclick="imgSlider('images/hero/fifth/cam1.png');changeBgColor('rgb(0,191,255)')"></li>
         </ul>
         <ul class="sci">
             <li><a href="#"><img src="images/icons/twitter.png"></a></li>
