--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
     <!-- Cuarta seccion --> 
-    <section class="hero hero-fourth"> 
+<!--     <section class="hero hero-fourth"> 
         <div class="container">
             <div class="title title-dark">
                 <h2 class="title-heading-fourth"></h2>
@@ -151,6 +151,20 @@
             <div class="cta">
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr" class="cta-link cta-link-darker">Join our waiting list</a>
             </div>
+        </div>
+    </section> --> 
+    <section class="sec fifth">
+        <div class="content"> 
+             <div class="textBox">
+                <h2>Our<br><span>Solution</span></h2>
+                <br>
+                <p> We use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with.
+                </p>
+                <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
+            </div> 
+            <div class="imgBox">
+                <img src="images/hero/fourth/fourth_large.png" class="tshirt">
+             </div> 
         </div>
     </section>
     <!-- Fin Cuarta seccion -->
