--- a/index.html
+++ b/index.html
@@ -143,15 +143,6 @@
 
 
     <!-- Cuarta seccion --> 
-<!--     <section class="hero hero-fourth"> 
-        <div class="container">
-            <div class="title title-dark">
-                <h2 class="title-heading-fourth"></h2>
-            </div>
-            <div class="cta">
-                <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr" class="cta-link cta-link-darker">Join our waiting list</a>
-            </div>
-        </div>
     </section> --> 
     <section class="sec fifth">
         <div class="content"> 
@@ -163,7 +154,7 @@
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
             <div class="imgBox">
-                <img src="images/hero/fourth/fourth_large.png" class="tshirt">
+                <img src="images/hero/fourth/fourth_large.png" class="cuarta">
              </div> 
         </div>
     </section>
