--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <!-- Cuarta seccion --> 
     </section> --> 
-    <section class="sec fifth">
+    <section class="sec fourth">
         <div class="content"> 
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
@@ -154,7 +154,7 @@
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
             <div class="imgBox">
-                <img src="images/hero/fourth/fourth_large.png" class="cuarta">
+                <img src="" class="cuarta">
              </div> 
         </div>
     </section>
