--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
     <!-- Cuarta seccion --> 
-    </section> --> 
+    </section>
     <section class="sec fourth">
         <div class="content"> 
              <div class="textBox">
@@ -153,9 +153,9 @@
                 </p>
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
-            <div class="imgBox">
+<!--             <div class="imgBox">
                 <img src="images/hero/fifth/cam1.png" class="cuarta">
-             </div> 
+             </div>  -->
         </div>
     </section>
     <!-- Fin Cuarta seccion -->
