--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- Cuarta seccion --> 
     </section>
     <section class="sec fourth">
-        <div class="content"> 
+        <div class="fourth-content"> 
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
                 <br>
