--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
                 <br>
-                <p> We use Artificial Intelligence tools to simulate formulation outcomes by combining the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with.
+                <p> We use Artificial Intelligence tools to simulate formulation outcomes <br> <br> by combining the rich diversity of raw materials found in the Americas and <br> <br> evaluate those outcomes to build products that enrich customers lives and communities that we work with.
                 </p>
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
-<!--             <div class="imgBox">
+            <div class="imgBox">
                 <img src="images/hero/fifth/cam1.png" class="cuarta">
-             </div>  -->
+             </div> 
         </div>
     </section>
     <!-- Fin Cuarta seccion -->
