--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
     <!-- Cuarta seccion --> 
     </section>
-    <section class="sec fourth">
-        <div class="fourth-content"> 
+    <section class="sec fifth">
+        <div class="content"> 
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
                 <br>
