--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <!-- Cuarta seccion --> 
     </section>
-    <section class="sec fifth">
+    <section class="sec fourth">
         <div class="content"> 
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
