--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
                 <br>
-                <p> We use Artificial Intelligence tools to simulate formulation outcomes <br> <br> by combining the rich diversity of raw materials found in the Americas and <br> <br> evaluate those outcomes to build products that enrich customers lives and communities that we work with.
+                <p> Leverages Artificial Intelligence to simulate a product formulation outcome with the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with. 
+			<br> <br>
+	   	    Let’s be creative working in finding smart ways to make positive changes for the long-term.
                 </p>
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
