--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <br>
                 <p> Leverages Artificial Intelligence to simulate a product formulation outcome with the rich diversity of raw materials found in the Americas and evaluate those outcomes to build products that enrich customers lives and communities that we work with. 
 			<br> <br>
-	   	    <strong>Let’s be creative working in finding smart ways to make positive changes for the long-term.<strong>
+	   	    Let’s be creative working in finding smart ways to make positive changes for the long-term.
                 </p>
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
