--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 </p>
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
-<!--             <div class="imgBox">
-                <img src="images/hero/fifth/cam1.png" class="cuarta">
-             </div>  -->
+            <div class="imgBox">
+                <img src="" class="cuarta">
+             </div> 
         </div>
     </section>
     <!-- Fin Cuarta seccion -->
