--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
     <!-- Cuarta seccion --> 
-    <section class="sec fourth">
+    <section class="fourth">
         <div class="content"> 
              <div class="textBox">
                 <h2>Our<br><span>Solution</span></h2>
