--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <a href="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">Join our waiting list</a>
             </div> 
             <div class="imgBox">
-                <img src="images/hero/fourth/solution.png" class="cuarta">
+                <img src="" class="cuarta">
              </div> 
         </div>
     </section>
