--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="hero-content">
             <h1>FORMULATIONS <u>WITHOUT</u>  THE  IMPACT  WE  HATE!</h1>
-            <p>To study the diversity of plants in Latin America to leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
+            <p>Study the diversity of plants in Latin America to leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
             </p>
             <div class="hero-form">
               <form action="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">
