--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="row  spacing-bottom mb--10">
                 <div class=" col-lg-5 col-md-4" data-aos="zoom-in-right"  data-aos-once="true" data-aos-delay="55" data-aos-duration="1500">
                     <div class="aurthor-image">
-                        <img src="image/aurthor.png" alt="">
+                        <img src="image/aurthor1.png" alt="">
                     </div>
                 </div>
         
