--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="hero-content">
-            <h1>FORMULATIONS <u>WITHOUT</u>  THE  IMPACT  WE  HATE!</h1>
-            <p>Study the diversity of plants in Latin America to leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
+            <h1>FORMULATIONS <u>FOR A </u>  BETTER WORLD</h1>
+            <p>Leverage precision fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
             </p>
             <div class="hero-form">
               <form action="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">
@@ -88,7 +88,7 @@
           </div>
       <div class="container">
           <div class="section-title text-center">
-              <h2>The Disruptive Company</h2>
+              <h2>Our Principles</h2>
           </div>
           <div class="row mb-d-30">
               <div class="col-md-6 col-lg-4 mb--30">
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-xl-5  col-sm-6 order-sm-1">
                     <div class="content-left-content">
-                        <h2>Fermentation</h2>
+                        <h2>Precision Fermentation</h2>
                         <p>
                             Fermentation has a long history within the food industry and it is emerging as a critical enabling platform for the alternative protein sector to help our precious environment.
                         </p>
