--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="hero-content">
-            <h1>FORMULATIONS <u>FOR A </u>  BETTER WORLD</h1>
-            <p>Leverage precision fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
+            <h1>PRECISION FERMENTATION FOR A <u> BETTER </u> WORLD</h1>
+            <p>Leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
             </p>
             <div class="hero-form">
               <form action="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">
