--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="hero-content">
             <h1>PRECISION FERMENTATION FOR A <u> BETTER </u> WORLD</h1>
-            <p>Leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.
+            <p>Leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation without the environmental impact we hate.
             </p>
             <div class="hero-form">
               <form action="https://ox4jdgjqzow.typeform.com/to/sl2Iv2Mr">
@@ -299,7 +299,7 @@
                   <img src="./image/footer-logo.png" alt="">
                 </div>
                 <div class="footer-text">
-                  <p>To study the diversity of plants in Latin America to leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation.</p>
+                  <p>Leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation without the environmental impact we hate.</p>
                 </div>
                 <ul class="footer-social-list">
                     <li>
