--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="hero-content">
-            <h1>PRECISION FERMENTATION FOR A <u> BETTER </u> WORLD</h1>
+            <h1>ENGINEERING PROTEINS WITH <u> PRECISION FERMENTATION </u> </h1>
             <p>Leverage fermentation and technology to cultivate microbial species and reinforce the functionality and capabilities of a product formulation without the environmental impact we hate.
             </p>
             <div class="hero-form">
